feat: history api
